test_regress/t/t_interface_wrong_bad.out
%Error: t/t_interface_wrong_bad.v:32:8: Port 'foo_port' expects 'foo_intf' interface but pin connects 'bar_intf' interface
                                      : ... note: In instance 't'
   32 |       .foo_port (bar)
      |        ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
